Changes for Royalty and Wallets along with UI

--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -122,6 +122,22 @@
                       </a>
                     </div>
                 </div>
+                <div class="col-xl-3 col-sm-6 mb-3">
+                  <div class="card text-white bg-primary o-hidden h-100">
+                    <div class="card-body">
+                      <div class="card-body-icon-kit">
+                        <i class="fas fa-wallet"></i>
+                      </div>
+                      <div class="mr-5"><b> Wallet</b></div>
+                    </div>
+                    <a class="card-footer text-white clearfix small z-1" href="{{ url_for('wallet.view_all_wallets') }}">
+                      <span class="float-left">View Details</span>
+                      <span class="float-right">
+                        
+                      </span>
+                    </a>
+                  </div>
+              </div>
             </div>
     <!-- Totals Table -->
     <div class="card1 shadow">
