--- a/templates/kitchen/kitchen_index.html
+++ b/templates/kitchen/kitchen_index.html
@@ -135,7 +135,7 @@
                  <div class="d-flex float-right" id="pagination-controls"></div>
             </div>
             <br>
-            <ol class="breadcrumb mt-5 mb-2">
+            <!--<ol class="breadcrumb mt-5 mb-2">
                 <li class="breadcrumb-item active">Statistics</li>
             </ol>
                     <div class="chart-container1 mt-2 mb-4">
@@ -145,7 +145,7 @@
                         <div class="chart-wrapper1">
                             <canvas id="pieChart"></canvas>
                         </div>
-                    </div>
+                    </div> -->
             <br>
             <script>
                 // Data from the backend route
