--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -93,7 +93,7 @@
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseOrder" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
+                                <div class="sb-nav-link-icon"><i class="fas fa-shopping-basket"></i></div>
                                 Orders
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
