--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -100,6 +100,7 @@
                         <!--   <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li> --> 
                         <li><a class="dropdown-item" href="{{ url_for('user_bp.get_profile') }}">Profile<i class="fas fa-user-tie" style="margin-left:56% ;"></i></a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('save_role_shares') }}">Close Kitchen<i class="fas fa-user-tie" style="margin-left:56% ;"></i></a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item text-center" href="{{ url_for('user_bp.logout') }}">Logout<i class="fa fa-sign-out" style="margin-left:50% ;"></i></a></li>
                     </ul>
@@ -132,7 +133,7 @@
                                 Statistics
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsemenu" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                <div class="sb-nav-link-icon"><i class="fas fa-pizza-slice"></i></div>
                                 Food & Dining
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
@@ -147,7 +148,7 @@
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                <div class="sb-nav-link-icon"><i class="fas fa-shopping-basket"></i></div>
                                 Orders
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
