--- a/templates/manager/edit_manager.html
+++ b/templates/manager/edit_manager.html
@@ -31,7 +31,7 @@
                     <input name="contact" type="text" value="{{ manager.contact }}" required>
                 </div>
                 <div class="sd-row password-wrapper">
-                    <input id="password" name="password" type="password" placeholder="Password" required>
+                    <input id="password" name="password" type="password" placeholder="Password">
                     <span class="eye-icon" onclick="togglePassword()">
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
