--- a/templates/distributor/edit_distributor.html
+++ b/templates/distributor/edit_distributor.html
@@ -2,6 +2,8 @@
     {% include 'admin/admin_header.html' %}
 {% elif role == 'Manager' %}
     {% include 'manager/manager_header.html' %}
+{% elif role == 'SuperDistributor' %}
+    {% include 'super_distributor/sd_header.html' %}
 {% endif %}
 <body>
 <div id="layoutSidenav_content">
@@ -32,7 +34,7 @@
                     <input name="contact" type="text" value="{{ distributor.contact }}" required>
                 </div>
                 <div class="sd-row password-wrapper">
-                    <input id="password" name="password" type="password" placeholder="Password" required>
+                    <input id="password" name="password" type="password" placeholder="Password">
                     <span class="eye-icon" onclick="togglePassword()">
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
