--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -70,3 +70,27 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* Under line for cards in dashboard */
+
+.dashboard-summary .card p {
+    font-size: 2em;
+    font-weight: bold;
+    color: #666565;
+    position: relative; /* Required for the pseudo-element */
+}
+
+.dashboard-summary .card p::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px; /* Adjust to position the underline */
+    width: 0; /* Initially, the underline has no width */
+    height: 3px; /* Thickness of the underline */
+    background-color: rgb(199, 38, 185);
+    transition: width 0.3s ease-in-out; /* Add transition for smooth animation */
+}
+
+.dashboard-summary .card p:hover::after {
+    width: 100%; /* On hover, the underline expands to full width */
+}
