--- a/templates/kitchen/wallet.html
+++ b/templates/kitchen/wallet.html
@@ -17,6 +17,7 @@
             {% endif %}
         {% endwith %}
         <div class="dashboard-container">
+            <a class="btn btn-primary" style="float: right; position: relative;" href="{{ url_for('save_role_shares') }}">Close Kitchen</a>
             <header class="dashboard-header">
                 <h1><b>WALLET</b></h1>
             </header>
