--- a/templates/super_distributor/sd_header.html
+++ b/templates/super_distributor/sd_header.html
@@ -54,6 +54,7 @@
                           <!-- <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li>  -->
                         <li><a class="dropdown-item" href="{{ url_for('user_bp.get_profile') }}">Profile<i class="fas fa-user-tie" style="margin-left:56% ;"></i></a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('user_bp.activity_logs') }}">View Logs<i class="fas fa-file-alt" style="margin-left:36% ;"></i></a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="{{ url_for('user_bp.logout') }}">Logout <i class="fa fa-sign-out" style="margin-left:50% ;"></i></a></li>
                     </ul>
