--- a/templates/admin/sales_report.html
+++ b/templates/admin/sales_report.html
@@ -6,7 +6,7 @@
     <main>
         <div class="container-fluid dashboard-container">
             <header class="dashboard-header text-center my-4">
-                <h1>SALES REPORT DASHBOARD</h1>
+                <h3>SALES REPORT</h3>
             </header>
 
             <div class="row dashboard-summary text-center mb-4">
@@ -81,28 +81,101 @@
             </div>
 
             <!-- Charts -->
-            <div id="chart-data" 
-                 data-sales-by-date="{{ sales_by_date | tojson | safe }}"
-                 data-sales-by-item="{{ sales_by_date_dict | tojson | safe }}">
-            </div>
             <div class="row mt-5">
                 <div class="col-md-6">
                     <div class="chart-container">
-                        <canvas id="sales-bar-chart"></canvas>
+                        <canvas id="salesByDateChart"></canvas>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="chart-container">
-                        <canvas id="sales-line-chart"></canvas>
+                        <canvas id="salesByItemChart"></canvas>
                     </div>
                 </div>
             </div>
         </div>
-    <div id="chart-data"
-        data-sales-by-date="{{ sales_by_date | tojson }}"
-        data-sales-by-item="{{ sales_by_item_data | tojson }}">
-    </div>
-    <script src="/static/js/sales_report.js"></script>
     </main>
+    <script src="{{ url_for('static', filename='/js/sales_report.js') }}"></script>
+
 {% include 'admin/admin_footer.html' %}
 </div>
+
+<script>
+    window.onload = function() {
+    // Data for Bar Chart (Sales by Date)
+    var salesByDateData = {
+        labels: {{ dates|tojson }},
+        datasets: [{
+            label: 'Total Sales',
+            data: {{ sales|tojson }},
+            backgroundColor: 'rgba(72, 138, 153, 1)',
+            borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+        }]
+    };
+
+    // Bar Chart for Sales by Date
+    var ctxBar = document.getElementById('salesByDateChart').getContext('2d');
+    new Chart(ctxBar, {
+        type: 'bar',
+        data: salesByDateData,
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            },
+            responsive: true,
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Sales by Date'
+                }
+            }
+        }
+    });
+
+    // Data for Line Chart (Sales by Item)
+    var salesByItemData = {
+        labels: {{ sales_by_item_data|map(attribute='item_name')|list|tojson }},
+        datasets: [{
+            label: 'Sales by Item',
+            data: {{ sales_by_item_data|map(attribute='total_sales')|list|tojson }},
+            fill: false,
+            borderColor: 'rgba(72, 138, 153, 1)',
+            tension: 0.1
+        }]
+    };
+
+    // Line Chart for Sales by Item
+    var ctxLine = document.getElementById('salesByItemChart').getContext('2d');
+    new Chart(ctxLine, {
+        type: 'line',
+        data: salesByItemData,
+        options: {
+            responsive: true,
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Sales by Item (Line Chart)'
+                }
+            },
+            scales: {
+                x: {
+                    title: {
+                        display: true,
+                        text: 'Item'
+                    }
+                },
+                y: {
+                    title: {
+                        display: true,
+                        text: 'Total Sales'
+                    },
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+};
+</script>
