--- a/templates/manager/manager_dashboard.html
+++ b/templates/manager/manager_dashboard.html
@@ -13,7 +13,7 @@
         <div class="dashboard-summary">
             <div class="card">
                 <h2>Total Sales Amount</h2>
-                <p>${{ total_sales_amount }}</p>
+                <p>₹ {{ total_sales_amount }}</p>
             </div>
             <div class="card">
                 <h2>Total Orders</h2>
